# wasm-life

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs
src/board/: mod.rs  random.rs  renderer.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  start-position.js
