[package]
name = "life"
version = "0.1.0"
authors = ["Evgeniy Rashchepkin <e.a.rashchepkin@gmail.com>"]
repository = "https://github.com/evgeniy-r/wasm-life"
edition = "2018"
description = "WAsm Life"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
fixedbitset = "0.3.1"
js-sys = "0.3.46"
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'ImageData',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rand = "0.8.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
